--- a/homepage.html
+++ b/homepage.html
@@ -26,6 +26,24 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section>
+            <figure class="banner-principal">
+                <img src="./img/logo3.png" alt="banner principal" class="logo2">
+            </figure>
+        </section>
+        <article class="banner-text" id="Inicio">
+            <h1>¿QUÉ ES LEAGUE OF LEGENDS?</h1>
+            <p> League of Legends es un juego de estrategia por equipos <br> en el que dos equipos de cinco campeones se enfrentan <br> para ver quién destruye antesla base del otro.
+            </p>
+        </article>
+        <article class="banner-textSecond" id="Campeones">
+            <h2>CONOCE A LOS CAMPEONES</h2>
+            <p> Elige de entre un elenco de campeones para <br> realizar jugadas épicas, asesinar rivales y derribar <br> torretas para alzarte con la victoria..
+            </p>
+        </article>
+    </main>
+    <script src="main.js"></script>
 </body>
 
 </html>
