--- a/homepage.html
+++ b/homepage.html
@@ -12,23 +12,32 @@
 </head>
 
 <body>
+
     <header class="header">
         <nav class="header-nav">
-            <div>
+             <div class="logos-container">
                 <img src="./img/logo1.png" alt="logo" class="logo">
                 <img src="./img/logo2.png" alt="logo" class="logo1">
             </div>
+
+            <input type="checkbox" id="check" />
+            <label for="check" class="bar-btn">
+                <i class="fas fa-align-justify"></i>
+            </label>
+
             <ul class="nav-menu">
-                <li><a href="#Inicio">INICIO</a></li>
+                <li><a href="./index.html">INICIO</a></li>
                 <li><a href="champions.html">CAMPEONES</a></li>
                 <li><a href="https://support.riotgames.com/hc/es-419?_gl=1%2A1t49y3j%2A_ga%2AMTYxNzAyMDYwLjE2NDYyMzIwNDQ.%2A_ga_FXBJE5DEDD%2AMTY0NjY2MzYwMi4yLjEuMTY0NjY2NTEzMS42MA..">ASISTENCIA</a></li>
                 <li><a href="https://www.leagueoflegends.com/es-es/how-to-play/?_gl=1*1kxkx0e*_ga*MTYxNzAyMDYwLjE2NDYyMzIwNDQ.*_ga_FXBJE5DEDD*MTY0NjY2MzYwMi4yLjEuMTY0NjY2NTEzMS42MA..">QUIERO JUGAR</a></li>
             </ul>
         </nav>
     </header>
+       
+    
     <main>
         <section>
-            <figure class="banner-principal">
+           <figure class="banner-principal">
                 <img src="./img/logo3.png" alt="banner principal" class="logo2">
             </figure>
         </section>
@@ -42,11 +51,12 @@
             <p> Elige de entre un elenco de campeones para realizar jugadas épicas, asesinar rivales y derribar torretas para alzarte con la victoria..
             </p>
             <section>
-                <button class="button-champion">Conoce a tu campeón</button>
+               <a href="champions.html"> <button class="button-champion">Conoce a tu campeón</button> </a>
             </section>
         </article>
     </main>
     <script src="main.js"></script>
+    <script src="https://kit.fontawesome.com/0c917cf36c.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
